Rewrite auth process

--- a/wallabag/Storyboard/Base.lproj/Main.storyboard
+++ b/wallabag/Storyboard/Base.lproj/Main.storyboard
@@ -682,7 +682,7 @@
                                 <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                 <state key="normal" title="Next"/>
                                 <connections>
-                                    <segue destination="hyy-VQ-rcz" kind="show" identifier="toClientId" id="nah-0H-R3t"/>
+                                    <action selector="nextPressed:" destination="LPm-N3-FEI" eventType="touchUpInside" id="RgU-Ws-f1q"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -701,6 +701,7 @@
                     <navigationItem key="navigationItem" title="Server" id="03w-5D-czm"/>
                     <connections>
                         <outlet property="server" destination="eWS-vU-XLm" id="HEz-Ei-vTf"/>
+                        <segue destination="hyy-VQ-rcz" kind="show" identifier="toClientId" id="l6t-91-dKJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9vo-5P-413" userLabel="First Responder" sceneMemberID="firstResponder"/>
